[package]
name = "wstcp"
version = "0.2.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "WebSocket to TCP proxy server"
homepage = "https://github.com/sile/wstcp"
repository = "https://github.com/sile/wstcp"
readme = "README.md"
keywords = ["websocket", "proxy", "tcp"]
license = "MIT"
edition = "2018"

[badges]
travis-ci = {repository = "sile/wstcp"}

[dependencies]
async-std = "1.0"
base64 = "0.13"
bytecodec = "0.4"
byteorder = "1"
clap = "2"
httpcodec = "0.2"
sha-1 = "0.9"
slog = {version = "2", features = ["release_max_level_debug"]}
sloggers = "2"
trackable = "1"
