[package]
name = "wstcp"
version = "0.2.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "WebSocket to TCP proxy server"
homepage = "https://github.com/sile/wstcp"
repository = "https://github.com/sile/wstcp"
readme = "README.md"
keywords = ["websocket", "proxy", "tcp"]
license = "MIT"
edition = "2018"

[dependencies]
async-std = "1.0"
base64 = "0.13"
bytecodec = "0.4"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.10.0"
httpcodec = "0.2"
log = "0.4.20"
sha-1 = "0.9"
trackable = "1"
